<resources>
    <string name="app_name">AudioAnt</string>

    <!--Info AlertDialog Strings-->
    <string name="recording_description">Um ein Geräusch aufzunehmen befolgen Sie die folgenden Schritte:
        \n\n1. Drücken Sie auf die \"Aufnahme starten\" Schaltfläche um die Aufnahme auf ihrem Gerät zu starten.
        \n2. Verursachen Sie das Geräusch das gelernt werden soll, zum Beispiel durch drücken der Türklingel.
        \n3. Betätigen Sie die Schaltfläche erneut um die Aufnahme zu beenden.
        \n\nUm zu überprüfen ob Sie das Geräusch korrekt aufgenommen haben können Sie auf \"Abspielen\" drücken.
        \n\nWenn sie das Geräusch erneut aufnehmen wollen können Sie das auf die gleiche Weise machen,
        die alte Aufnahme wird automatisch überschrieben.
    </string>
    <string name="recording_description_header">Aufnahmahinweise</string>

    <string name="wlan_description">
        Um die AudioAnt mit dem Smartphone zu verbinden ohne den Internetzugriff zu verlieren kann
        die AudioAnt mit einem bereits bestehenden Drahtlosen Netzwerk (WLAN) verbunden werden.
        Geben sie hierfür die Daten ihres Heim-Wlans in die Textboxen ein und drücken Sie auf
        \"Wlan Informationen senden\" umd die Daten zur AudioAnt zu senden.

        \n\nNach dem Senden erhalten Sie eine Informationsmeldung ob die AudioAnt nun mit dem Wlan
        verbunden ist. War der Verbindungsversuch erfolgreich so verbindet sich ihr Smartphone
        automatisch mit ihrem Heim-Wlan und Sie haben wieder zugriff auf das Internet.
    </string>
    <string name="wlan_description_header">Wofür wird Wlan benötigt?</string>

    <string name="audioant_benachrichtigungen_description">
        Mit den Optionen unterhalb können Sie festlegen wie die AudioAnt auf ein eingehendes Signal
        reagieren soll.
        \n\n\"Benachrichtigungston\" ist derjenige Ton der auf der AudioAnt abgespielt wird, wenn
        kein bestimmter Ton während des Lernprozesses ausgewählt wird (z.B.: wenn das Geräusch über
        drücken des vorgesehenen Knopfes auf der AudioAnt gelernt wird).
    </string>
    <string name="audioant_benachrichtigungen_description_header">AudioAnt Benachrichtigungen</string>


    <string name="list_description_header">Information</string>
    <string name="list_description">Hier sehen Sie alle Geräusche die die AudioAnt gelernt hat!.
    \n\nUm ein Geräusch zu löschen (es wird nicht mehr von der AudioAnt erkannt) drücken Sie auf das
    Geräusch und drücken Sie anschließend \"Ja, Löschen\"</string>

    <!-- -->

    <!-- AudioAnt Settings Activity-->
    <string name="audioant_settings_label_drahtloses_internet">Lokales Wlan</string>
    <string name="audioant_settings_label_bnachrichtigungen">Benachrichtigungen</string>
    <string name="audioant_settings_button_namen_übernehmen">aktuellen Wlan namen einfügen</string>
    <string name="audioant_settings_button_wlan_info_senden">Wlan informationen senden</string>
    <string name="audioant_settings_checkbox_lichtsignale">Lichtsignale aktivieren</string>
    <string name="audioant_settings_checkbox_audiosignale">Audiosignale aktivieren</string>
    <string name="audioant_settings_label_lautstärke">Lautstärke der Signaltöne</string>
    <string name="audioant_settings_editText_wifi_name">Name des Wlans</string>
    <string name="audioant_settings_editText_wifi_password">Passwort</string>
    <string name="audioant_setting_label_default_sound">Benachrichtigungston</string>
    <string name="audioant_settings_button_wlan_list">Netzwerk aus Liste auswählen</string>
    <string name="audioant_settings_choose_wifi_header">Netzwerk auswählen</string>
    <string name="audioant_settings_message_connect_error">Die eingegebenen Daten sind fehlerhaft!  Überprüfen Sie, ob Name und Passwort des Netzwerks stimmen und versuchen Sie es erneut!</string>


    <!-- Smartphone Settings Activity-->
    <string name="settings_notifications_description">
        Hier können Sie festlegen, was auf ihrem Smartphone geschehen soll sobald ein Geräusch
        von der AudioAnt erkannt wird.
    </string>
    <string name="settings_notifications_description_header">Benachrichtigungen</string>
    <string name="settings_checkbox_led">LED Blitz verwenden</string>
    <string name="settings_checkbox_notifications">Warnton am Handy ausgeben</string>
    <string name="settings_checkbox_vibrations">Vibrieren</string>


    <!-- Record Activity-->
    <string name="notification_choose_header">Benachrichtigungston auswählen</string>
    <string name="record_label_notification_sound">Benachrichtigungston</string>
    <string name="record_label_sound_chosen">Beispielton</string>
    <string name="title_activity_asdfasdfasdf">asdfasdfasdf</string>
    <string name="record_button_start_recording">Aufnahme starten</string>
    <string name="record_button_stop_recording">Aufnahme stoppen</string>
    <string name="record_button_start_replay">Abspielen</string>
    <string name="record_button_stop_replay">Stoppen</string>


    <!-- More info to Sound Activity-->
    <string name="more_info_label_name">Geräuschname:</string>
    <string name="more_info_label_alert">AudioAnt Benachrichtigungston:</string>

    <!-- Main Activity-->
    <string name="main_message_no_wifi_connection">Sie sind derzeit mit keinem Wlan netzwerk verbunden!
    \n\nUm die Applikation zu benutzen müssen Sie entweder mit dem Hotspot der AudioAnt verbunden sein
    oder mit dem Wlan dessen Benutzerdaten Sie der AudioAnt übermittelt haben.
    \n\nFalls Sie die App zum ersten Mal benutzern, starten Sie die AudioAnt versuchen Sie es erneut</string>
    <string name="main_message_first_usage">Es freut uns sehr dass Sie unsere App benutzen!
        \n\nUm die App zu benutzern ist eine Verbindung mit der AudioAnt über Wlan notwendig. Schalten
        Sie die AudioAnt ein falls Sie dies noch nicht getan haben und drücken Sie auf \"Verbinden\"
        sobald die Statusleuchte der AudioAnt leuchtet.

    </string>
    <string name="main_message_no_server_connection">Es konnte keine Verbinung zum Server aufgebaut werden!!
    \n\nStellen Sie sicher dass die AudioAnt aktiviert ist und starten Sie die App neu!</string>
    <string name="main_message_no_wifi_connection_hotspot">
        Das Smartphone ist nicht mit dem Hotspot der AudioAnt verbunden.
        \n\nStarten Sie die AudioAnt und drücken Sie auf \"Verbinden\"
        sobald die Statusleuchte der AudioAnt leuchtet.
    </string>

    <string name="main_label_connected">Mit AudioAnt verbunden</string>
    <string name="main_label_not_connected">Nicht mit AudioAnt verbunden</string>


    <!-- List Activity-->


    <!-- Alarm Activity-->
    <string name="alarm_label">Ein Geräusch wurde von der AudioAnt erkannt!!!</string>
    <string name="alarm_label_description_single_sound">Das folgende Geräusch wurde von der AudioAnt erkannt:</string>
    <string name="alarm_label_description_multiple_sound">Die folgenden Geräusche wurden von der AudioAnt erkannt:</string>
    <string name="alarm_button_schließen">Schließen</string>


    <!-- More Info to Sound Activity-->
    <string name="more_info_button_play">Gelerntes Geräusch abspielen</string>
    <string name="more_info_description">Hier können Sie sich den aufgenommenen Ton anhören</string>
    <string name="more_info_description_header">Information</string>

</resources>
